<resources>
    <string name="app_name">Aerohockey</string>
    <string name="web_id">138416154419-afjg6nu0d2ndgg1el99phjsu9jco7htc.apps.googleusercontent.com</string>
    <string name="title_activity_signin">SigninActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_btm_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="fields">Fields</string>
    <string name="pucks">Pucks</string>
    <string name="strikers">Strikers</string>
    <string name="user_info">User info</string>
    <string name="user">User</string>
    <string name="title_activity_settings">MainActivity</string>
    <string name="title_activity_btm_nav">MainActivity</string>
    <string name="title_activity_text">MainActivity</string>
    <string name="back">Return to main menu</string>
    <string name="no_money">Not enough money</string>
    <string name="select_first">Select first</string>
    <string name="select_second">Select second</string>
    <string name="buy_first">Buy first </string>
    <string name="select_third">Select third</string>
    <string name="buy_second">Buy second</string>
    <string name="buy_third">Buy third</string>
    <string name="select_default">Select default</string>
    <string name="curr_selected">Currently selected</string>
    <string name="transaction_failed">Transaction failed</string>
    <string name="buy">Buy: $</string>
    <string name="sign_out">Sign Out</string>
    <string name="save_changes">Save Changes</string>
    <string name="enter_your_new_name">Enter your new name</string>
    <string name="App_created_by">This app was developed by</string>
</resources>