<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.fieldsFragment">

    <Button
        android:id="@+id/selectFirstField"
        android:layout_width="409dp"
        android:layout_height="57dp"
        android:layout_marginTop="244dp"
        android:text="@string/select_first"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/selectSecondField"
        android:layout_width="411dp"
        android:layout_height="49dp"
        android:layout_marginTop="444dp"
        android:text="@string/select_second"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buyFirstField"
        android:layout_width="112dp"
        android:layout_height="86dp"
        android:layout_marginStart="292dp"
        android:layout_marginTop="136dp"
        android:text="@string/buy_first"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buySecondField"
        android:layout_width="134dp"
        android:layout_height="93dp"
        android:layout_marginStart="280dp"
        android:layout_marginTop="328dp"
        android:text="@string/buy_second"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/selectThirdField"
        android:layout_width="411dp"
        android:layout_height="63dp"
        android:layout_marginTop="584dp"
        android:text="@string/select_third"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buyThirdField"
        android:layout_width="110dp"
        android:layout_height="82dp"
        android:layout_marginStart="296dp"
        android:layout_marginTop="500dp"
        android:text="@string/buy_third"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/selectDefaultField"
        android:layout_width="411dp"
        android:layout_height="49dp"
        android:layout_marginTop="84dp"
        android:text="@string/select_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loadingCircleField"
        style="@style/Widget.App.CircularProgressIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/fieldDefaultImage"
        android:layout_width="155dp"
        android:layout_height="84dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/field_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="121dp"
        android:layout_height="118dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="124dp"
        android:src="@drawable/field_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="129dp"
        android:layout_height="133dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="300dp"
        android:src="@drawable/field_red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="133dp"
        android:layout_height="92dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="488dp"
        android:src="@drawable/field_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>